fix: invalid value of word-wrap

--- a/github-markdown.css
+++ b/github-markdown.css
@@ -532,7 +532,7 @@
 }
 
 .markdown-body li {
-  word-wrap: break-all;
+  word-wrap: break-word;
 }
 
 .markdown-body li>p {
